--- a/styles/registro.css
+++ b/styles/registro.css
@@ -19,7 +19,7 @@
 }
 
 .registro .secao__esquerda .titulo__esquerda {
-    font-size: 3em;
+    font-size: 4em;
     margin: 0.2em 0;
     font-weight: 900;
     color: var(--branco);
@@ -28,7 +28,8 @@
 .registro .secao__esquerda .paragrafo__esquerda {
     color: var(--branco);
     font-weight: 300;
-    font-size: 0.6em;
+    font-size: 0.9em;
+    line-height: 1.50em
 }
 
 .registro .secao__form {
@@ -45,7 +46,7 @@
 }
 
 .registro .secao__form .paragrafo__form {
-    color: var(--cinza);
+    color: var(--cinzaescuro);
     font-size: 0.6em;
     font-weight: 300;
     margin: 1rem 0;
@@ -61,7 +62,7 @@
     margin: 0.5rem;
     background-color: var(--cinza);
     border: none;
-    box-shadow: -5px 0px 0 var(--principal);
+    border-radius: 15px;
 }
 
 .registro .secao__form .formulario .formulario__others {
@@ -84,11 +85,15 @@ margin-right: auto;
 }
 
 .registro .secao__form .formulario .formulario__button {
-    background-color: var(--principal);
+     background-color: var(--principal);
     border: none;
-    border-radius: 20px;
-    padding: 1em;
+    border-radius: 30px;
+    padding: 1.5em;
     color: var(--branco);
     font-size: 1em;
-    font-weight: 600;
+    font-weight: 300;
+    width: 300px;
+    margin-left: 25%;
+    margin-right: 0;
+    display: block;
 }
