--- a/styles/cabecalho.css
+++ b/styles/cabecalho.css
@@ -62,3 +62,22 @@
     box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, 0.5);
     font-size: 1.1em;
 }
+
+.banner-inicial {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    
+}
+
+.banner-img {
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    display: block;
+    border-radius: 70px;
+    -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 60%, rgba(0,0,0,0.2) 100%);
+    mask-image: radial-gradient(circle, rgba(0,0,0,1) 60%, rgba(0,0,0,0.2) 100%);
+}
