--- a/styles/cabecalho.css
+++ b/styles/cabecalho.css
@@ -64,20 +64,37 @@
 }
 
 .banner-inicial {
+    position: relative;
     width: 100%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .banner-img {
-    width: 100%;
+    width: 100%;    
     max-width: 1200px;
     height: auto;
     display: block;
     border-radius: 70px;
     -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 60%, rgba(0,0,0,0.2) 100%);
     mask-image: radial-gradient(circle, rgba(0,0,0,1) 60%, rgba(0,0,0,0.2) 100%);
+}
+
+.banner-texto{
+    position: absolute;
+  font-size: 1.5em;
+  color: var(--branco);
+  font-weight: 900;
+  line-height: 1.2em;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 1rem;
+  border-radius: 8px;
+  display: flex;
+  bottom: 2rem;
+  left: 2rem; 
 }
