--- a/styles/password-reset.css
+++ b/styles/password-reset.css
@@ -1,11 +1,13 @@
-.login {
+.reset__senha {
     display: grid;
     padding: 11% 15%;
     grid-template-columns: 50% 50%;
     background-color: var(--cinza);
 }
 
-.login .secao__esquerda {
+.reset__senha .secao__esquerda {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 12.6rem 1rem;
@@ -14,54 +16,59 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-position-y: 1%;
 }
 
-.login .secao__esquerda .subtitulo__esquerda{
-    font-size: 1.5em;
+.reset__senha .secao__esquerda .esquerda__textos {
+    margin: auto 0;
+}
+
+.reset__senha .secao__esquerda .subtitulo__esquerda{
+    font-size: 1.1em;
     color: var(--branco);
     font-weight: 600;
 }
 
-.login .secao__esquerda .titulo__esquerda {
-    font-size: 4em;
+.reset__senha .secao__esquerda .titulo__esquerda {
+    font-size: 3.4em;
     margin: 0.2em 0;
     font-weight: 900;
     color: var(--branco);
 }
 
-.login .secao__esquerda .paragrafo__esquerda {
+.reset__senha .secao__esquerda .paragrafo__esquerda {
     color: var(--branco);
     font-weight: 300;
     font-size: 0.9em;
     line-height: 1.50em
 }
 
-.login .secao__form {
+.reset__senha .secao__form {
     background-color: var(--branco);
     padding: 5rem 3rem;
     text-align: center;
     align-items: center;
 }
 
-.login .secao__form .titulo__form {
+.reset__senha .secao__form .titulo__form {
     font-weight: 800;
     font-size: 2.5em;
     color: var(--principal);
 }
 
-.login .secao__form .paragrafo__form {
+.reset__senha .secao__form .paragrafo__form {
     color: var(--cinzaescuro);
     font-size: 0.6em;
     font-weight: 300;
     margin: 1rem 0;
 }
 
-.login .secao__form .formulario {
+.reset__senha .secao__form .formulario {
     display: flex;
     flex-direction: column;
 }
 
-.login .secao__form .formulario .formulario__item {
+.reset__senha .secao__form .formulario .formulario__item {
     padding: 1.5em;
     margin: 1.0rem;
     background-color: var(--cinza);
@@ -70,33 +77,33 @@
     
 }
 
-.login .secao__form .formulario .formulario__others {
+.reset__senha .secao__form .formulario .formulario__others {
     display: flex;
     align-items: center;
     text-align: center;
 }
 
-.login .secao__form .formulario .formulario__others .formulario__check__text {
+.reset__senha .secao__form .formulario .formulario__others .formulario__check__text {
 font-weight: 300;
 font-size: 0.8em;
 margin-right: auto;
 }
 
-.login .secao__form .formulario .formulario__others .formulario__registro {
+.reset__senha .secao__form .formulario .formulario__others .formulario__registro {
     text-decoration: none;
     color: var(--principal);
     font-weight: 600;
     font-size: 0.8em; 
 }
 
-.login .secao__form .formulario .formulario__others .formulario__recuperarsenha {
+.reset__senha .secao__form .formulario .formulario__others .formulario__recuperarsenha {
     text-decoration: none;
     color: var(--principal);
     font-weight: 600;
     font-size: 0.8em; 
 }
 
-.login .secao__form .formulario .formulario__button {
+.reset__senha .secao__form .formulario .formulario__button {
     background-color: var(--principal);
     border: none;
     border-radius: 30px;
@@ -110,11 +117,11 @@ margin-right: auto;
     margin-bottom: 1rem;
 }
 
-.login .secao__form .mantenha__concetado {
+.reset__senha .secao__form .mantenha__concetado {
     display: flex;
     margin: 0.4rem;
 }
 
-.login .secao__form .formulario .formulario__others .formulario__registro {
+.reset__senha .secao__form .formulario .formulario__others .formulario__registro {
     margin-right: auto;
 }
