--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 @import url(/styles/cabecalho.css);
+@import url(/styles/section-principal.css);
+@import url(/styles/sobre-nos.css);
 @import url(/styles/login.css);
 @import url(/styles/registro.css);
+@import url(/styles/password-reset.css);
+@import url(/styles/agendamento.css);
 
 
 :root {
     --branco: #FFFFFF;
     --preto: #000000;
     --cinza: #eeeeee;
+    --cinza-azulado: #2676b8;
     --principal: #28A7F4;
     --secundario: #2BE2EB;
-    --secundario-detalhes: #80D0EA;
-    --principal-detalhes: #80D0EA;
-    --branco-gelo: #6ed8e4;
     --font-principal: "Inter";
     
 
