--- a/styles/section-principal.css
+++ b/styles/section-principal.css
@@ -50,7 +50,7 @@
     font-size: 2.5em;
     font-weight: 700;
     margin: 0 0 1rem;
-    color: var(--cinza-azulado);
+    color: var(--branco);
     margin-left: 5rem;
 }
 
