--- a/styles/section-principal.css
+++ b/styles/section-principal.css
@@ -26,7 +26,7 @@
     margin: 1rem 0;
     margin-left: 5rem;
     margin-top: 26%;
-    color: var(--cinza-azulado);
+    color: var(--branco);
 }
 
 .banner__inicial .banner__texto__container, .container__mensagem .banner__texto {
