--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --branco: #FFFFFF;
     --preto: #000000;
     --cinza: #eeeeee;
+    --cinzaescuro: #dbdbdb;
     --cinza-azulado: #2676b8;
     --principal: #28A7F4;
     --secundario: #2BE2EB;
