--- a/styles/agendamento.css
+++ b/styles/agendamento.css
@@ -1,4 +1,63 @@
-.agendamento {
+.container__agendamento {
     background-color: var(--cinza);
     padding: 1rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.container__agendamento .agendamento .agendamento__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container__agendamento .agendamento .campo__grupo, .agendamento__form .texto__span {
+    font-size: 1.2em;
+    font-weight: 500;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
+
+.container__agendamento .agendamento .campo__grupo .area, .agendamento__form .desc__sintomas {
+    margin-bottom: 1rem;
+    width: 20.00rem;
+    height: 3.5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--principal);
+    font-weight: 500;
+    font-size: 1em;
+}
+
+.container__agendamento .agendamento .agendamento__form .botao__enviar {
+    padding: 1.5rem;
+    border-radius: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container__agendamento .resposta {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.container__agendamento .resposta .resposta__numero {
+    font-weight: 600;
+}
+
+.container__agendamento .resposta .tela__resposta {
+    background-color: var(--branco);
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow: 3px 3px 14px 12px rgba(145, 193, 255, 0.5);
+    margin: 1rem;
+}
+
+.container__agendamento .resposta .tela__resposta .protocolo__numero {
+    color: var(--principal);
+    font-weight: 900;
+    font-size: 1.5em;
 }
