--- a/styles/agendamento.css
+++ b/styles/agendamento.css
@@ -1,6 +1,6 @@
 .container__agendamento {
     background-color: var(--cinza);
-    padding: 1rem;
+   
     display: grid;
     grid-template-columns: 50% 50%;
 }
@@ -13,28 +13,32 @@
 }
 
 .container__agendamento .agendamento .campo__grupo, .agendamento__form .texto__span {
-    font-size: 1.2em;
-    font-weight: 500;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
+    padding: 1em;
+    margin: 0.5rem;
+
+
+    border-radius: 15px;
 }
 
 .container__agendamento .agendamento .campo__grupo .area, .agendamento__form .desc__sintomas {
-    margin-bottom: 1rem;
-    width: 20.00rem;
-    height: 3.5rem;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--principal);
-    font-weight: 500;
-    font-size: 1em;
+    padding: 1em;
+    margin: 0.5rem;
+    background-color: var(--cinza);
+ 
+    border-radius: 15px;
+
+}
+
+.resposta .agendamento__form .desc__sintomas {
+    padding: 5em;
 }
 
 .container__agendamento .agendamento .agendamento__form .botao__enviar {
-    padding: 1.5rem;
-    border-radius: 1rem;
-    margin-left: auto;
-    margin-right: auto;
+   padding: 1em;
+    margin: 0.5rem;
+    background-color: var(--cinza);
+    border: 1px solid var(--principal);
+    border-radius: 15px;
 }
 
 .container__agendamento .resposta {
@@ -42,6 +46,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: var(--branco);
 }
 
 .container__agendamento .resposta .resposta__numero {
@@ -60,4 +65,50 @@
     color: var(--principal);
     font-weight: 900;
     font-size: 1.5em;
+}
+
+
+.container__agendamento {
+   background-image: url(../img/bem_vindo.svg);
+   background-repeat: no-repeat;
+   background-size: cover;
+  
+   margin: 6rem;
+}
+.tela__resposta {
+display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.protocolo__numero {
+    margin: 1rem;
+    padding: 1rem;
+    background-color: var(--branco);
+    border-radius: 1rem;
+}
+
+.calenadrio {
+    padding: 1em;
+    border-radius: 14px;
+}
+
+.titulofodase {
+      font-weight: 900;
+    font-size: 2.5em;
+    color: var(--principal);
+    margin: 0.7rem;
+}
+
+.campo__grupo .area {
+     padding: 1em;
+    margin: 0.5rem;
+    background-color: var(--cinza);
+ 
+    border-radius: 15px;
+}
+
+.bodycomclass {
+    background-color: var(--cinza);
 }
