--- a/styles/section-principal.css
+++ b/styles/section-principal.css
@@ -51,7 +51,8 @@
     color: var(--branco);
     font-size: 1em;
     font-weight: 600;
-    margin: 0.5rem 0;
+    margin: 0.2rem 0;
+    margin-bottom: auto;
 }
 
 .banner__inicial .container__mensagem {
