--- a/styles/password-reset.css
+++ b/styles/password-reset.css
@@ -23,12 +23,6 @@
     margin: auto 0;
 }
 
-.reset__senha .secao__esquerda .subtitulo__esquerda{
-    font-size: 1.1em;
-    color: var(--branco);
-    font-weight: 600;
-}
-
 .reset__senha .secao__esquerda .titulo__esquerda {
     font-size: 3.4em;
     margin: 0.2em 0;
@@ -36,12 +30,13 @@
     color: var(--branco);
 }
 
-.reset__senha .secao__esquerda .paragrafo__esquerda {
+.reset__senha .secao__esquerda .subtitulo__esquerda{
+    font-size: 1.1em;
     color: var(--branco);
-    font-weight: 300;
-    font-size: 0.9em;
-    line-height: 1.50em
+    font-weight: 600;
 }
+
+/*LADO DIREITO GRID*/
 
 .reset__senha .secao__form {
     background-color: var(--branco);
@@ -89,14 +84,7 @@ font-size: 0.8em;
 margin-right: auto;
 }
 
-.reset__senha .secao__form .formulario .formulario__others .formulario__registro {
-    text-decoration: none;
-    color: var(--principal);
-    font-weight: 600;
-    font-size: 0.8em; 
-}
-
-.reset__senha .secao__form .formulario .formulario__others .formulario__recuperarsenha {
+.reset__senha .secao__form .formulario .formulario__others .formulario__check__text .formulario__registro {
     text-decoration: none;
     color: var(--principal);
     font-weight: 600;
@@ -112,16 +100,13 @@ margin-right: auto;
     font-size: 1em;
     font-weight: 300;
     width: 200px;
-   margin: 0 auto;
-    display: block;   
+   margin: 1% auto;
     margin-bottom: 1rem;
 }
 
-.reset__senha .secao__form .mantenha__concetado {
-    display: flex;
-    margin: 0.4rem;
+@media (max-width: 1024px) {
+    .reset__senha {
+        padding: 27.5% 5% 27.5% 5%;
+    }
 }
-
-.reset__senha .secao__form .formulario .formulario__others .formulario__registro {
-    margin-right: auto;
-}
+ 
